test/functions/bradc/varFns/declVarUsedRetHalt.good
declVarUsedRetHalt.chpl:2: error: halt reached
