test/functions/bradc/varFns/declVarUsedRetHalt.chpl
proc p() ref : int {
   halt();
}
ref q = p();
